[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyharmony"
version = "0.1.0"
description = "Detect imports, install missing Python packages in a virtual environment, and help manage dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Nashit Humam" }
]
dependencies = [
  "typer>=0.12.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/pyharmony"
Repository = "https://github.com/yourusername/pyharmony"
Issues = "https://github.com/yourusername/pyharmony/issues"

[project.scripts]
pyharmony = "pyharmony.cli:app"

[tool.setuptools]
packages = ["pyharmony"]